--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -545,4 +545,24 @@ abstract={Isolated current sensing is fundamental in several contexts, including
 keywords={Sensors;Magnetic sensors;Voltage measurement;Sensor phenomena and characterization;Magnetic hysteresis;Current measurement;Perpendicular magnetic anisotropy;Current sensing;Hall effect;galvanic isolation;instrumentation amplifier;analog front-end;current-to-magnetic field transduction;sensor characterization;sensor modeling},
 doi={10.1109/JSEN.2021.3119766},
 ISSN={1558-1748},
-month={June},}
+month={June},
+}
+
+
+@Article{BJJ16,
+shorthand = {BJJ16},
+shortauthor={BJJ},
+author={Blagojevic, Marjan
+and Jovanovic, Ugljesa and Jovanovic, Igor and Mancic, Dragan and Popovic, Radivoje},
+title={Coreless open-loop current transducers based on hall effect sensor CSA-1V},
+journal={Facta universitatis - series: Electronics and Energetics},
+year={2016},
+month={Jan},
+day={01},
+volume={29},
+pages={489-507},
+abstract={The paper provides an overview of coreless open-loop current transducers based on Hall effect sensor CSA-1V. Depending on the implementation method and current range, the presented transducers are divided in the four groups. The transducers are capable to measure AC and DC currents ranging from several tens of miliamperes up to several hundreds of amperes. Methods for resolving issues with the skin effect and stray magnetic fields are also presented including the experimental test results. Some of these methods are novelty and have never been presented in literature.},
+doi={10.2298/FUEE1604489B},
+url={https://doi.org/10.2298/FUEE1604489B}
+}
+
