--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -35,9 +35,8 @@
 \newacronym{yaml}{YAML}{Yet Another Markup Language}
 \newacronym{dr}{DR}{Dynamic Range}
 \newacronym{mds}{MDS}{Minimum Detectable Signal}
-
-
-
+\newacronym{cog}{CoG}{Center Of Gravity}
+\newacronym{adc}{ADC}{Analog to Digital Converter}
 
 
 
