--- a/documentation/thesis/thesis.tex
+++ b/documentation/thesis/thesis.tex
@@ -349,6 +349,7 @@
 % ABBILDUNGSVERZEICHNIS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagebreak
+\addcontentsline{toc}{chapter}{Figures} 
 \listoffigures
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -360,7 +361,7 @@
 
 \pagebreak
 
-\chapter*{Equations}
+\chapter*{List of Equations}
 \addcontentsline{toc}{chapter}{Equations} 
 \listofmyequations
 
