--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -445,12 +445,12 @@ system. To measure a deviation of better than \emph{1000 \gls{ppm}} in a
 \emph{50mT} magnetic field, a resolution that is less than \emph{1000
 \gls{ppm}} of \emph{50mT} is needed.
 
-\noteworthy{\frac{1000}{1000000} \times 50 \, mT = 0.05 \, mT }{1000ppm from 50mT needed resolution calucation I}
+\noteworthy{\frac{1000}{1000000} \times 50 \, mT = 0.05 \, mT }{: 1000ppm from 50mT needed resolution calucation I}
 
 To convert this into microtesla (\(\mu\)T), a multiplication by
 \emph{1000} is needed:
 
-\noteworthy{0.05 \, mT \times 1000 = 50 \, \mu T}{1000ppm from 50mT needed resolution calucation II}
+\noteworthy{0.05 \, mT \times 1000 = 50 \, \mu T}{: 1000ppm from 50mT needed resolution calucation II}
 
 This means that to measure a deviation of better than \emph{1000
 \gls{ppm}} in a \(50mT\) magnetic field, a resolution of less than
@@ -2875,7 +2875,7 @@ The sorting indicator for each measurement is determined using the
 \emph{\gls{cog}} function and is implemented using the following
 equation:
 
-\noteworthy{\text{CoG} = \frac{\sum{D_{istance} \times W_{eight}}}{\sum{W_{eight}}}}{Center of Gravity}
+\noteworthy{\text{CoG} = \frac{\sum{D_{istance} \times W_{eight}}}{\sum{W_{eight}}}}{: Center of Gravity}
 
 Where \emph{\(D_{distance}\)} corresponds to the set distance from the
 centre of the magnet to the surface of the sensor \gls{ic}. This is the
@@ -3617,7 +3617,7 @@ deviation\tabularnewline
 linearity\tabularnewline
 \(\mu_{td}\) & -1.99 & -5.13 & \(\mu\)T / \(^{\circ}\)C & Sensor
 temperature coefficients\tabularnewline
-DR & {[}-138;220{]} & {[}-3.1;3.4{]} & \(\mu\)T & maximum linear
+DR & {[}-178;220{]} & {[}-3.1;3.4{]} & \(\mu\)T & maximum linear
 \gls{dr}\tabularnewline
 \bottomrule
 \end{longtable}
