--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -37,6 +37,7 @@
 \newacronym{mds}{MDS}{Minimum Detectable Signal}
 \newacronym{cog}{CoG}{Center Of Gravity}
 \newacronym{adc}{ADC}{Analog to Digital Converter}
+\newacronym{ai}{AI}{Artificial Intelligence}
 
 
 
