--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -11,9 +11,11 @@ acquisition.
 A passive shimming process is typically used to adjust the B0 field
 afterwards. This is complex and time-consuming and requires manual
 corrections to the magnets used. To avoid this process, magnets can be
-systematically measured in advance. Sensor accuracy and repeatability
-data acquisition, storage and subsequent analysis play an important role
-in this methodology.
+systematically measured in advance. Data acquisition, storage and
+subsequent analysis of the recorded data play an important role in this
+method. It is also essential that the sensors used are repeatable and
+work with the specified accuracy, which must also be characterised in
+advance for this purpose.
 
 Several existing open source solutions implement individual parts, but
 do not provide a complete data processing pipeline from acquisition to
