--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -566,3 +566,19 @@ doi={10.2298/FUEE1604489B},
 url={https://doi.org/10.2298/FUEE1604489B}
 }
 
+@Article{W14,
+shorthand = {W14},
+shortauthor={W},
+author={Wachowicz, Keith},
+title={Evaluation of active and passive shimming in magnetic resonance imaging},
+journal={Research and Reports in Nuclear Medicine},
+year={2014},
+month={Oct},
+day={15},
+volume={4},
+pages={1},
+abstract={With higher magnet strengths for magnetic resonance imaging (MRI) units becoming more commonplace, both for animal imaging systems as well as whole-body in vivo systems, magnetic field distortions due to inhomogeneous distributions of magnetic susceptibility and air--tissue interfaces will become more intense. Further, the popularization of MRI-hybrid devices, such as positron emission tomography/MR or MR/radiotherapy hybrids, which rely on the assumption of geometric accuracy for their diagnostic or therapeutic effectiveness, will lead to greater restrictions on permissible geometric error. As a result, shimming procedures (methods by which the distortions induced on the main magnetic field, B0, are remedied) are requiring greater flexibility and corrective range. Shimming methods can be broadly classified into passive (using materials with magnetic properties to remedy field distortions through their passive response to B0) and active techniques (utilizing strategically placed and energized electric coils to produce corrective magnetic fields). Both these techniques have promise to address the additional challenges brought about by the changing MRI landscape. This work reviews traditional shimming methods and principles, and gives an overview of new and novel approaches to this ever-important issue in MRI.},
+doi={10.2147/RRNM.S46526},
+url={https://doi.org/10.2147/RRNM.S46526}
+}
+
