--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -63,7 +63,7 @@ the overall homogeneity of the magnetic field. While deviations in
 homogeneity can be measured post-assembly, the intricate task of
 readjustment is considered. It is less cost-intensive and less
 complicated to measure the magnets proactively, prior to the
-finalization of the \gls{mri} system.
+finalization of the \gls{mri} system. \customcite{W14}
 
 The focus of this thesis is to improve low-frequency \gls{mri}
 technology by examining the usability of magnetic field sensors for
