--- a/documentation/thesis/thesis_references_alias.tex
+++ b/documentation/thesis/thesis_references_alias.tex
@@ -1,34 +1,46 @@
-\defcitealias{BC16}{BC16}
-
-
-\defcitealias{J21}{J21}
-
-
 \defcitealias{WZC21}{WZC21}
 
 
-\defcitealias{MWO24}{MWO24}
+\defcitealias{NK16}{NK16}
 
 
-\defcitealias{DBN08}{DBN08}
+\defcitealias{H80}{H80}
 
 
-\defcitealias{GKT16}{GKT16}
+\defcitealias{WAH21}{WAH21}
 
 
-\defcitealias{OB20}{OB20}
-
-
-\defcitealias{OTW19}{OTW19}
-
-
-\defcitealias{HMW20}{HMW20}
+\defcitealias{W14}{W14}
 
 
 \defcitealias{SB10}{SB10}
 
 
+\defcitealias{J21}{J21}
+
+
+\defcitealias{HMW20}{HMW20}
+
+
+\defcitealias{WSB19}{WSB19}
+
+
+\defcitealias{DBN08}{DBN08}
+
+
+\defcitealias{BC16}{BC16}
+
+
+\defcitealias{CP16}{CP16}
+
+
+\defcitealias{BPA22}{BPA22}
+
+
 \defcitealias{HH21}{HH21}
+
+
+\defcitealias{MMN19}{MMN19}
 
 
 \defcitealias{CSG22}{CSG22}
@@ -37,41 +49,32 @@
 \defcitealias{G17}{G17}
 
 
-\defcitealias{WAH21}{WAH21}
+\defcitealias{GKT16}{GKT16}
+
+
+\defcitealias{OTW19}{OTW19}
 
 
 \defcitealias{OTW21}{OTW21}
 
 
-\defcitealias{BPA22}{BPA22}
-
-
-\defcitealias{H80}{H80}
-
-
 \defcitealias{DRW23}{DRW23}
-
-
-\defcitealias{AFL23}{AFL23}
-
-
-\defcitealias{MMN19}{MMN19}
-
-
-\defcitealias{WSB19}{WSB19}
-
-
-\defcitealias{CP16}{CP16}
-
-
-\defcitealias{P17}{P17}
 
 
 \defcitealias{BJJ16}{BJJ16}
 
 
+\defcitealias{P17}{P17}
+
+
+\defcitealias{AFL23}{AFL23}
+
+
+\defcitealias{OB20}{OB20}
+
+
 \defcitealias{O24}{O24}
 
 
-\defcitealias{NK16}{NK16}
+\defcitealias{MWO24}{MWO24}
 
