--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -604,10 +604,10 @@ synthesizes study outcomes, discusses implications, and provides
 insights for future work. This chapter ensures closure and aids readers
 in grasping the broader context and significance of the research.
 
-Finally, a comprehensive hardware and software framework needs to be
-established, which can measure diverse objects using various sensors. In
-addition, comments must be made on the suitability of the sensors used
-for magnetic field measurements.
+A comprehensive hardware and software framework needs to be established,
+which can measure diverse objects using various sensors. In addition,
+comments must be made on the suitability of the sensors used for
+magnetic field measurements.
 
 \hypertarget{unified-sensor}{%
 \chapter{Unified Sensor}\label{unified-sensor}}
@@ -3522,19 +3522,19 @@ specified.
 With this setup, it is possible to automatically acquire measured values
 from the sensors under controlled temperature conditions.
 
+The field of permanent magnets is highly temperature-dependent and can
+lose its magnetisation at higher temperatures (typically
+\emph{\textgreater=80\(^{\circ}\)} for non-high-quality \emph{Type-N}
+magnets \customcite{GKT16}). The temperature range is selected so that it
+lies within a sufficient range for typical subsequent measurement tasks.
+
 The same procedure is used as for the \emph{Linearity} measurement in
 chapter \ref{sensor-characterisation-linearity}, except that instead of
 moving the linear axis, the temperature of the temperature chamber is
 systematically increased from \emph{20\(^{\circ}\)} to
 \emph{50\(^{\circ}\)}. Between each of these temperature changes, the
-system is given a waiting time of 30 minutes after reaching the target
-temperature.
-
-The field of permanent magnets is highly temperature-dependent and can
-lose its magnetisation at higher temperatures (typically
-\emph{\textgreater=80\(^{\circ}\)} for non-high-quality \emph{Type-N}
-magnets \customcite{GKT16}). The temperature range is selected so that it
-is within a sufficient range for the application.
+system is given a additional waiting time of \emph{30} minutes after
+reaching the target temperature.
 
 \hypertarget{temperature-sensitivity-analysis}{%
 \subsection{Temperature Sensitivity
